[tool.poetry]
name = "repl-nix-monkeybot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_monkeybot"}]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
openai = "^1.3.7"
replit = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
